--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,2 @@
-<h>Welcome to data science project session</h>
-<h>Let's learn and get a job</h>
+<h1>Welcome To Data Science Project Session</h1>
+<h2>Let's Learn And Get Jobs</h2>
